jo/test2.yml
# deployment
apiVersion: v1
kind: Deployment
metadata:
  name: eunjunDeploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eunjun
  template:
    labels:
      app: eunjun
