jo/myweb-ingress-rule.yml
#ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb
  namespace: ingress-myweb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
<<<<<<< HEAD
    nginx.ingress.kubernetes.io/whitelist-source-range: '0.0.0.0/0'
=======
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
>>>>>>> 879906f (테스트)
spec:
  ingressClassName: myweb-nginx
  rules:
  - http:
      paths:
<<<<<<< HEAD
        - pathType: Prefix
          path: /regist
          backend:
            service:
              name: regist-svc
              port:
                number: 80
        - pathType: Prefix
          path: /
          backend:
            service:
              name: login-svc
              port:
                number: 80

        - pathType: Prefix
          path: /edit
          backend:
            service:
              name: edit-svc
              port:
                number: 80

        - pathType: Prefix
          path: /login
          backend:
            service:
              name: login-svc
              port:
                number: 80
=======
      - pathType: Prefix
        path: /
        backend:
          service:
            name: login-svc
            port:
              number: 80
          
      - pathType: Prefix
        path: /regist
        backend:
          service:
            name: regist-svc
            port:
              number: 80

            
      - pathType: Prefix
        path: /edit
        backend:
          service:
            name: edit-svc
            port:
              number: 80

      - pathType: Prefix
        path: /login
        backend:
          service:
            name: login-svc
            port:
              number: 80
    
>>>>>>> 879906f (테스트)
